--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
-    <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+    <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js">
+      Dropzone.autoDiscover = false;
+      Dropzone.options.blendDropzone = false;
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BroRender - Accelerated Distributed Render by Brocorp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
